Fix Next.js public directory handling and Docker multi-stage builds
- Add public directory with robots.txt and favicon placeholder
- Fix Dockerfile COPY issues for both backend and dashboard
- Remove incorrect public/ from .gitignore (was conflicting with Next.js)
- Ensure all Docker multi-stage builds work correctly
- Add proper directory creation in final stages

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -18,6 +18,8 @@ FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+# Ensure public directory exists for Next.js
+RUN mkdir -p public
 
 # Next.js collects completely anonymous telemetry data about general usage.
 ENV NEXT_TELEMETRY_DISABLED 1
@@ -34,14 +36,15 @@ ENV NEXT_TELEMETRY_DISABLED 1
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-COPY --from=builder /app/public ./public
-
 # Set the correct permission for prerender cache
-RUN mkdir .next
+RUN mkdir -p .next public
 RUN chown nextjs:nodejs .next
 
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+# Copy public directory if it exists (may be created during build)
+COPY --from=builder /app/public ./public 2>/dev/null || true
 
 USER nextjs
 
