Fix pnpm availability in Docker builder stage
- Move pnpm installation to base stage so it's available in all stages
- Ensure pnpm is globally available for both deps and builder stages
- Fix Docker multi-stage build pnpm dependency issue

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,11 +1,11 @@
 # Multi-stage build for Next.js dashboard
 FROM node:18-alpine AS base
+RUN apk add --no-cache libc6-compat
+# Install pnpm globally so it's available in all stages
+RUN npm install -g pnpm@9
 
 # Install dependencies only when needed
 FROM base AS deps
-RUN apk add --no-cache libc6-compat
-# Install pnpm
-RUN npm install -g pnpm@9
 WORKDIR /app
 
 # Copy package files
